--- a/team.html
+++ b/team.html
@@ -53,7 +53,7 @@
 
 
 
-   <div class="col-sm-12 col-md-12 col-lg-6 bg-white first" style="width: 37rem;">
+   <div class="col-sm-12 col-md-12 col-lg-6 bg-white firs" style="width: 37rem;">
     <div class="d-flex">
      <img src="image/first-img.png" alt="" style="width: 170px; height: 190px; border-radius: 50%;">
      <div class="" style="padding-left: 2%; margin-top: 3%;">
